--- a/app/src/main/res/layout/fragment_enter_code.xml
+++ b/app/src/main/res/layout/fragment_enter_code.xml
@@ -38,18 +38,18 @@
         android:text="@string/register_text_we_send"
         app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"
         android:layout_margin="@dimen/vertical_margin"
-        android:hint="@string/register_hint_default_code"
         android:gravity="center"/>
 
 
     <EditText
+        style="@style/edit_text"
         android:id="@+id/register_input_code"
         android:autofillHints=""
         android:maxLength="6"
         android:gravity="center"
+        android:hint="@string/register_hint_default_code"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register_text_we_send"
-        style="@style/edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/register_text_we_send"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
